[project]
name = "ansible-vault-nvim"
version = "0.1.0"
description = "A Nvim plugin to show inline ansible-vault secrets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.2.0",
    "pynvim>=0.6.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.14.14",
]
